--- a/services/currency-conversion-service/src/main/resources/application.properties
+++ b/services/currency-conversion-service/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.config.import=optional:configserver:http://localhost:8888
 server.port=8100
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+resilience4j.retry.instances.currency-conversion.maxAttempts=3
+resilience4j.retry.instances.currency-conversion.waitDuration=1s
+resilience4j.retry.instances.currency-conversion.enableExponentialBackoff=true
+resilience4j.retry.instances.currency-conversion.exponentialBackoffMultiplier=2
