--- a/services/currency-conversion-service/src/main/resources/application.properties
+++ b/services/currency-conversion-service/src/main/resources/application.properties
@@ -8,3 +8,5 @@ resilience4j.retry.instances.currency-conversion.maxAttempts=3
 resilience4j.retry.instances.currency-conversion.waitDuration=1s
 resilience4j.retry.instances.currency-conversion.enableExponentialBackoff=true
 resilience4j.retry.instances.currency-conversion.exponentialBackoffMultiplier=2
+
+resilience4j.circuitbreaker.instances.currency-conversion.failureRateThreshold=90
