--- a/services/currency-exchange-service/src/main/resources/application.properties
+++ b/services/currency-exchange-service/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=currency-exchange
 spring.config.import=optional:configserver:http://localhost:8888
 server.port=8000
 
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.datasource.url=jdbc:h2:mem:currency.db
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+resilience4j.ratelimiter.instances.currency-exchange.limitForPeriod=5
+resilience4j.ratelimiter.instances.currency-exchange.limitRefreshPeriod=10s
