--- a/services/currency-exchange-service/src/main/resources/application.properties
+++ b/services/currency-exchange-service/src/main/resources/application.properties
@@ -11,3 +11,5 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 resilience4j.ratelimiter.instances.currency-exchange.limitForPeriod=5
 resilience4j.ratelimiter.instances.currency-exchange.limitRefreshPeriod=10s
+
+resilience4j.bulkhead.instances.currency-exchange.maxConcurrentCalls=1
