Added Zipkin for distributed tracing with docker command docker run -p 9411:9411 openzipkin/zipkin:2.23

--- a/services/currency-conversion-service/src/main/resources/application.properties
+++ b/services/currency-conversion-service/src/main/resources/application.properties
@@ -10,3 +10,5 @@ resilience4j.retry.instances.currency-conversion.enableExponentialBackoff=true
 resilience4j.retry.instances.currency-conversion.exponentialBackoffMultiplier=2
 
 resilience4j.circuitbreaker.instances.currency-conversion.failureRateThreshold=90
+
+spring.sleuth.sample.probability=1.0
