--- a/services/currency-exchange-service/src/main/resources/application.properties
+++ b/services/currency-exchange-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=currency-exchange
 spring.config.import=optional:configserver:http://localhost:8888
 server.port=8000
 
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:currency.db
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
@@ -13,3 +13,5 @@ resilience4j.ratelimiter.instances.currency-exchange.limitForPeriod=5
 resilience4j.ratelimiter.instances.currency-exchange.limitRefreshPeriod=10s
 
 resilience4j.bulkhead.instances.currency-exchange.maxConcurrentCalls=1
+
+spring.sleuth.sample.probability=1.0
