--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: "3.7"
 
 services:
+  # Portainer
+  portainer:
+    image: portainer/portainer-ce
+    container_name: portainer
+    restart: always
+    ports:
+      - "7000:8000"
+      - "9000:9000"
+    networks:
+      - currency-network
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+
   # Message broker
   rabbitmq:
     image: rabbitmq:3-management-alpine
@@ -102,4 +116,5 @@ networks:
   currency-network:
 
 volumes:
+  portainer_data:
   rabbitmq_data:
