Removed non required projects and dependencies for Kubernetes

--- a/services/currency-exchange-service/src/main/resources/application.properties
+++ b/services/currency-exchange-service/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=currency-exchange
-spring.config.import=optional:configserver:http://localhost:8888
 server.port=8000
 
 spring.jpa.show-sql=true
@@ -7,11 +6,13 @@ spring.datasource.url=jdbc:h2:mem:currency.db
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-
 resilience4j.ratelimiter.instances.currency-exchange.limitForPeriod=5
 resilience4j.ratelimiter.instances.currency-exchange.limitRefreshPeriod=10s
 
 resilience4j.bulkhead.instances.currency-exchange.maxConcurrentCalls=1
 
 spring.sleuth.sample.probability=1.0
+
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
