--- a/services/currency-conversion-service/src/main/resources/application.properties
+++ b/services/currency-conversion-service/src/main/resources/application.properties
@@ -1,8 +1,5 @@
 spring.application.name=currency-conversion
-spring.config.import=optional:configserver:http://localhost:8888
 server.port=8100
-
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 resilience4j.retry.instances.currency-conversion.maxAttempts=3
 resilience4j.retry.instances.currency-conversion.waitDuration=1s
@@ -12,3 +9,7 @@ resilience4j.retry.instances.currency-conversion.exponentialBackoffMultiplier=2
 resilience4j.circuitbreaker.instances.currency-conversion.failureRateThreshold=90
 
 spring.sleuth.sample.probability=1.0
+
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
