Adding readinessProbe and livenessProbe from spring-boot-starter-actuator to avoid downtime when applying deployments

--- a/services/currency-conversion-service/deployment.yml
+++ b/services/currency-conversion-service/deployment.yml
@@ -26,6 +26,14 @@ spec:
       - image: sjm-currency-conversion-service-kubernetes:0.0.2-SNAPSHOT
         imagePullPolicy: IfNotPresent
         name: sjm-currency-conversion-service-kubernetes
+        readinessProbe:
+          httpGet:
+            port: 8100
+            path: /actuator/health/readiness
+        livenessProbe:
+          httpGet:
+            port: 8100
+            path: /actuator/health/liveness
         envFrom:
           - configMapRef:
               name: currency-conversion
