--- a/services/currency-exchange-service/deployment.yml
+++ b/services/currency-exchange-service/deployment.yml
@@ -26,6 +26,14 @@ spec:
       - image: sjm-currency-exchange-service-kubernetes:0.0.2-SNAPSHOT
         imagePullPolicy: IfNotPresent
         name: sjm-currency-exchange-service-kubernetes
+        readinessProbe:
+          httpGet:
+            port: 8000
+            path: /actuator/health/readiness
+        livenessProbe:
+          httpGet:
+            port: 8000
+            path: /actuator/health/liveness
       restartPolicy: Always
 ---
 apiVersion: v1
